profilelist1exp/unpackaged/objects/Solution_Provider_Territory_Details__c.object
<CustomObject>
    <fields>
        <fullName>APID_Legal_Country__c</fullName>
        <label>APID Legal Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APID_Owner_Badge__c</fullName>
        <label>APID Owner Badge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APID_Owner_Name__c</fullName>
        <label>APID Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APID_Territory_ID__c</fullName>
        <label>APID Territory ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APID_Territory_Name__c</fullName>
        <label>APID Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Track__c</fullName>
        <label>Partner Program Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <label>Partner Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Territory Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APID_Legal_Country__c</columns>
        <columns>APID_Owner_Badge__c</columns>
        <columns>APID_Owner_Name__c</columns>
        <columns>APID_Territory_ID__c</columns>
        <columns>APID_Territory_Name__c</columns>
        <columns>Partner_Program_Track__c</columns>
        <columns>Partner_Track__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Solution Provider Territory Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>